--- a/Tarea1/tarea1.2/CMakeLists.txt
+++ b/Tarea1/tarea1.2/CMakeLists.txt
@@ -3,5 +3,5 @@ project(tarea1_2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp calculos.cpp calculos.h)
 add_executable(tarea1_2 ${SOURCE_FILES})
